--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,25 @@ Header Section
   line-height: 26px;
   letter-spacing: -0.175px;
 }
+@media screen and (min-width: 768px) {
+  .price-grid-title {
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.3px;
+  }
+  .price-grid-subtitle {
+    margin-bottom: 11px;
+
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: -0.225px;
+  }
+  .price-grid-text {
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: -0.2px;
+  }
+}
 /* 
 ==========
 Pricing Section
@@ -151,6 +170,9 @@ Pricing Section
   line-height: 26px;
   letter-spacing: -0.2px;
 }
+@media screen and (min-width: 768px) {
+  
+}
 /* button */
 .price-section-btn {
   display: inline-block;
@@ -185,8 +207,8 @@ Features
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(255, 255, 255, 0.25),
-    rgba(255, 255, 255, 0.25)
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0.15)
   );
   z-index: 1;
   pointer-events: none;
